36. atrn.c, etrn.c: lock dir/seriallock instead of doing it in atrn/etrn scripts
37. create_service, indimail-mta.spec: use infifo service in ODMR service for auth
38. svctool: add STRIP_DOMAIN env variable for local authentication by sys-checkpwd
39. smtpd.c, etrn.sh, atrn.sh: refactored ETRN, ATRN code
40. etrn.sh: use ipauth as IP address whitelist
41. etrn.sh: use ipauth before mx check

* Tue Oct 17 2023 18:34:04 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.5-1.1%{?dist}
Release 3.0.5-1.1 Start 11/09/2023 End 17/10/2023
======= Release Highlights ================================================
o svctool: fixed path/MAXDAEMONS in tcpserver run scripts - major bug which
  prevented tcpserver reaching concurrency > 40
o filterit: New filterit command to implement filters
  [filterit](https://github.com/mbhangui/indimail-mta/wiki/filterit.1)
o qmail-lspawn: added filterit and envdir internal command
  [qmail-lspawn](https://github.com/mbhangui/indimail-mta/wiki/qmail-lspawn.8)
o refactored and tested CHECKSENDER code
o added feature to hide IP addresses in Received headers by setting HIDE_IP
  environment variable
o refactored and tested SPF code
o Bugfix SRS code
o Updated test-indimail-mta with additional tests (SPF, SRS, CHECKSENDER,
  CHECKRECIPIENT, etc)
===========================================================================
- 11/09/2023
01. cdb-database: allow comments in input file
02. svctool: localiphost incorrectly configured with IP instead of hostname
03. qmail-showctl.c: fixed descriptions for localiphost, outgoingip
- 13/09/2023
04. maildirdeliver.c: BUG. Remove NULL character appended to rpline, dtline
05. updated dot-qmail, maildirdeliver, qmail-command man pages
- 14/09/2023
06. svctool: fixed path/MAXDAEMONS in tcpserver run scripts [major]
- 15/09/2023
07. preline.c: moved check for env variables after getopt
- 17/09/2023
08. rspamstat.sh: Fixed division by zero when total=0